--- a/index.html
+++ b/index.html
@@ -455,108 +455,108 @@
             <div class="projects-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <div class="project-type">Data Pipeline</div>
-                    <h3 class="project-title">Real-time Analytics Platform</h3>
+                    <div class="project-type">Financial Data Pipeline</div>
+                    <h3 class="project-title">Loan Structuring Tool Data Capture</h3>
                     <p class="project-description">
-                        <strong>Problem:</strong> Legacy batch processing couldn't handle real-time analytics needs for 10M+ daily events.<br><br>
-                        <strong>Approach:</strong> Built scalable streaming pipeline using Kafka, Spark Streaming, and Delta Lake with automated data quality checks.<br><br>
-                        <strong>Outcome:</strong> Reduced data latency from 24 hours to <5 minutes, improved data accuracy by 99.7%, and enabled real-time dashboards for 500+ users.
+                        <strong>Problem:</strong> Manual processing of loan transfer data took 8 hours and was prone to human error, creating bottlenecks in financial operations.<br><br>
+                        <strong>Approach:</strong> Built automated ETL pipeline using Python, Azure services, and SharePoint integration with concurrent processing and intelligent data consolidation.<br><br>
+                        <strong>Outcome:</strong> Reduced processing time from 8 hours to 15 minutes, eliminated human error, and achieved 10x scalability with complete audit trails for regulatory compliance.
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">Apache Spark</span>
-                        <span class="tech-tag">Kafka</span>
-                        <span class="tech-tag">Delta Lake</span>
-                        <span class="tech-tag">Docker</span>
-                        <span class="tech-tag">Kubernetes</span>
+                        <span class="tech-tag">Azure</span>
+                        <span class="tech-tag">SharePoint</span>
+                        <span class="tech-tag">COM Automation</span>
+                        <span class="tech-tag">Threading</span>
+                        <span class="tech-tag">ETL</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">
+                        <a href="https://github.com/zackhada/Loan-Structuring-Tool-Data-Capture" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="#" class="project-link">
-                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        <a href="https://github.com/zackhada/Loan-Structuring-Tool-Data-Capture#-performance-benchmarks" class="project-link" target="_blank">
+                            <i class="fas fa-chart-line"></i> Benchmarks
                         </a>
                     </div>
                 </div>
 
                 <!-- Project 2 -->
                 <div class="project-card">
-                    <div class="project-type">MLOps Platform</div>
-                    <h3 class="project-title">Automated ML Pipeline</h3>
+                    <div class="project-type">Document Processing Pipeline</div>
+                    <h3 class="project-title">Loan Document Validation Pipeline</h3>
                     <p class="project-description">
-                        <strong>Problem:</strong> Data scientists spent 70% of their time on data prep and model deployment instead of model development.<br><br>
-                        <strong>Approach:</strong> Created end-to-end MLOps platform with automated feature engineering, model training, and deployment using Airflow and MLflow.<br><br>
-                        <strong>Outcome:</strong> Reduced model deployment time from weeks to hours, increased model accuracy by 15%, and enabled automated retraining for 20+ models.
+                        <strong>Problem:</strong> Manual validation of loan documents was time-intensive, error-prone, and couldn't scale with increasing document volumes in financial operations.<br><br>
+                        <strong>Approach:</strong> Developed automated validation pipeline with OCR, data extraction, business rule validation, and comprehensive error handling for financial compliance.<br><br>
+                        <strong>Outcome:</strong> Achieved 95%+ accuracy in document validation, reduced processing time by 80%, and ensured regulatory compliance with detailed audit logging.
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">Apache Airflow</span>
-                        <span class="tech-tag">MLflow</span>
-                        <span class="tech-tag">PostgreSQL</span>
-                        <span class="tech-tag">FastAPI</span>
-                        <span class="tech-tag">Docker</span>
+                        <span class="tech-tag">OCR</span>
+                        <span class="tech-tag">Document Processing</span>
+                        <span class="tech-tag">Validation</span>
+                        <span class="tech-tag">Logging</span>
+                        <span class="tech-tag">Financial Data</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">
+                        <a href="https://github.com/zackhada/Loan-Document-Validation-Pipline" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="#" class="project-link">
-                            <i class="fas fa-external-link-alt"></i> Architecture
+                        <a href="https://github.com/zackhada/Loan-Document-Validation-Pipline#readme" class="project-link" target="_blank">
+                            <i class="fas fa-book"></i> Documentation
                         </a>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
                 <div class="project-card">
-                    <div class="project-type">Infrastructure</div>
-                    <h3 class="project-title">Cloud Data Warehouse</h3>
+                    <div class="project-type">Real Estate Data Pipeline</div>
+                    <h3 class="project-title">Appraisal Processing Pipeline</h3>
                     <p class="project-description">
-                        <strong>Problem:</strong> On-premise data warehouse couldn't scale with growing data volumes and complex analytics requirements.<br><br>
-                        <strong>Approach:</strong> Migrated to cloud-native architecture using Snowflake, dbt, and Terraform with automated CI/CD pipelines.<br><br>
-                        <strong>Outcome:</strong> Achieved 5x query performance improvement, reduced infrastructure costs by 40%, and enabled self-service analytics for business teams.
+                        <strong>Problem:</strong> Manual processing of real estate appraisal data was creating delays in loan origination and required extensive data transformation and validation.<br><br>
+                        <strong>Approach:</strong> Built comprehensive ETL pipeline for appraisal data extraction, transformation, and standardization with automated quality checks and error handling.<br><br>
+                        <strong>Outcome:</strong> Streamlined appraisal data processing, improved data quality and consistency, and reduced loan processing time with standardized output formats.
                     </p>
                     <div class="tech-stack">
-                        <span class="tech-tag">Snowflake</span>
-                        <span class="tech-tag">dbt</span>
-                        <span class="tech-tag">Terraform</span>
-                        <span class="tech-tag">GitHub Actions</span>
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">SQL</span>
+                        <span class="tech-tag">ETL</span>
+                        <span class="tech-tag">Data Validation</span>
+                        <span class="tech-tag">Real Estate</span>
+                        <span class="tech-tag">Financial Services</span>
+                        <span class="tech-tag">Automation</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">
+                        <a href="https://github.com/zackhada/Appraisal-Processing-Pipeline" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="#" class="project-link">
-                            <i class="fas fa-chart-line"></i> Metrics
+                        <a href="https://github.com/zackhada/Appraisal-Processing-Pipeline#readme" class="project-link" target="_blank">
+                            <i class="fas fa-cogs"></i> Pipeline Details
                         </a>
                     </div>
                 </div>
 
                 <!-- Project 4 -->
                 <div class="project-card">
-                    <div class="project-type">Backend Service</div>
-                    <h3 class="project-title">Distributed Data API</h3>
+                    <div class="project-type">AI/ML Agent</div>
+                    <h3 class="project-title">Stock Analysis Agent</h3>
                     <p class="project-description">
-                        <strong>Problem:</strong> Multiple applications needed consistent access to processed data with sub-second response times.<br><br>
-                        <strong>Approach:</strong> Built high-performance REST API using FastAPI with Redis caching, connection pooling, and horizontal scaling.<br><br>
-                        <strong>Outcome:</strong> Handles 10K+ requests/sec with 99.9% uptime, reduced average response time to 120ms, and serves 50+ internal applications.
+                        <strong>Problem:</strong> Manual stock analysis and report generation was time-intensive and lacked consistency in financial research workflows.<br><br>
+                        <strong>Approach:</strong> Developed intelligent agent using LangChain, OpenAI APIs, and financial data sources with automated analysis and report generation capabilities.<br><br>
+                        <strong>Outcome:</strong> Automated comprehensive stock analysis with real-time data integration, generated structured investment reports, and provided actionable insights for decision-making.
                     </p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
-                        <span class="tech-tag">FastAPI</span>
-                        <span class="tech-tag">Redis</span>
-                        <span class="tech-tag">PostgreSQL</span>
-                        <span class="tech-tag">Docker</span>
-                        <span class="tech-tag">Nginx</span>
+                        <span class="tech-tag">LangChain</span>
+                        <span class="tech-tag">OpenAI API</span>
+                        <span class="tech-tag">Financial APIs</span>
+                        <span class="tech-tag">AI Agents</span>
+                        <span class="tech-tag">NLP</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" class="project-link">
+                        <a href="https://github.com/zackhada/Stock_Analysis_Agent" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="#" class="project-link">
-                            <i class="fas fa-book"></i> API Docs
+                        <a href="https://github.com/zackhada/Stock_Analysis_Agent#readme" class="project-link" target="_blank">
+                            <i class="fas fa-robot"></i> Agent Demo
                         </a>
                     </div>
                 </div>
@@ -621,7 +621,7 @@
         <div class="container">
             <h2 class="section-title">Let's Connect</h2>
             <div class="contact-links">
-                <a href="mailto:zack.hada@example.com" class="contact-link">
+                <a href="mailto:zacharyhada@gmail.com" class="contact-link">
                     <i class="fas fa-envelope contact-icon"></i>
                     <span>Email</span>
                 </a>
@@ -632,10 +632,6 @@
                 <a href="https://github.com/zackhada" class="contact-link" target="_blank">
                     <i class="fab fa-github contact-icon"></i>
                     <span>GitHub</span>
-                </a>
-                <a href="/blog" class="contact-link">
-                    <i class="fas fa-blog contact-icon"></i>
-                    <span>Blog</span>
                 </a>
             </div>
         </div>
