--- a/index.html
+++ b/index.html
@@ -474,9 +474,6 @@
                         <a href="https://github.com/zackhada/Loan-Structuring-Tool-Data-Capture" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="https://github.com/zackhada/Loan-Structuring-Tool-Data-Capture#-performance-benchmarks" class="project-link" target="_blank">
-                            <i class="fas fa-chart-line"></i> Benchmarks
-                        </a>
                     </div>
                 </div>
 
@@ -500,9 +497,6 @@
                     <div class="project-links">
                         <a href="https://github.com/zackhada/Loan-Document-Validation-Pipline" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
-                        </a>
-                        <a href="https://github.com/zackhada/Loan-Document-Validation-Pipline#readme" class="project-link" target="_blank">
-                            <i class="fas fa-book"></i> Documentation
                         </a>
                     </div>
                 </div>
@@ -528,9 +522,6 @@
                         <a href="https://github.com/zackhada/Appraisal-Processing-Pipeline" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="https://github.com/zackhada/Appraisal-Processing-Pipeline#readme" class="project-link" target="_blank">
-                            <i class="fas fa-cogs"></i> Pipeline Details
-                        </a>
                     </div>
                 </div>
 
@@ -555,9 +546,6 @@
                         <a href="https://github.com/zackhada/Stock_Analysis_Agent" class="project-link" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="https://github.com/zackhada/Stock_Analysis_Agent#readme" class="project-link" target="_blank">
-                            <i class="fas fa-robot"></i> Agent Demo
-                        </a>
                     </div>
                 </div>
             </div>
@@ -575,40 +563,40 @@
                     <p style="color: var(--secondary-text); margin-bottom: 2rem;">
                         Complete technical background and experience
                     </p>
-                    <a href="/Zachary Hada Resume 20250916.pdf" class="btn btn-primary" download>
+                    <a href="./Zachary Hada Resume 20250916.pdf" class="btn btn-primary" download>
                         <i class="fas fa-download"></i> Download PDF
                     </a>
                 </div>
                 <div class="resume-highlights">
                     <h3 style="margin-bottom: 2rem;">Key Highlights</h3>
                     <div class="highlight-item">
-                        <i class="fas fa-database highlight-icon"></i>
+                        <i class="fas fa-university highlight-icon"></i>
                         <div>
-                            <strong>5+ years</strong> building production data pipelines processing 100TB+ daily
+                            <strong>Education:</strong> Computer Science with focus on data systems and financial technology
                         </div>
                     </div>
                     <div class="highlight-item">
-                        <i class="fas fa-cloud highlight-icon"></i>
+                        <i class="fas fa-building highlight-icon"></i>
                         <div>
-                            <strong>Cloud Expert:</strong> AWS, GCP, Azure with infrastructure-as-code
+                            <strong>Financial Services:</strong> Specialized in loan processing, document validation, and real estate data pipelines
                         </div>
                     </div>
                     <div class="highlight-item">
                         <i class="fas fa-code highlight-icon"></i>
                         <div>
-                            <strong>Languages:</strong> Python, SQL, Scala, Java with production experience
+                            <strong>Core Technologies:</strong> Python, ETL pipelines, Azure, SharePoint integration, AI/ML agents
                         </div>
                     </div>
                     <div class="highlight-item">
-                        <i class="fas fa-cogs highlight-icon"></i>
+                        <i class="fas fa-robot highlight-icon"></i>
                         <div>
-                            <strong>Technologies:</strong> Spark, Kafka, Airflow, Docker, Kubernetes
+                            <strong>AI Integration:</strong> LangChain, OpenAI APIs, automated analysis and intelligent document processing
                         </div>
                     </div>
                     <div class="highlight-item">
                         <i class="fas fa-chart-line highlight-icon"></i>
                         <div>
-                            <strong>Impact:</strong> Improved data accuracy by 99%+, reduced costs by 40%
+                            <strong>Proven Results:</strong> 97% time reduction (8hrs → 15min), 95%+ accuracy in validation systems
                         </div>
                     </div>
                 </div>
