--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
-            --primary-bg: #0A0E27;
-            --secondary-bg: #1A1F3A;
-            --accent-bg: #2A2F4A;
-            --primary-text: #E8EAED;
-            --secondary-text: #9AA0A6;
-            --accent-blue: #4285F4;
-            --accent-green: #34A853;
-            --accent-orange: #FF9500;
-            --border-color: #3C4043;
-            --hover-bg: #3C4142;
+            --primary-bg: #0A0A0A;
+            --secondary-bg: #1A1A1A;
+            --accent-bg: #2A2A2A;
+            --primary-text: #F5F5F5;
+            --secondary-text: #A0A0A0;
+            --accent-primary: #FFFFFF;
+            --accent-secondary: #E0E0E0;
+            --border-color: #404040;
+            --hover-bg: #404040;
+            --card-shadow: rgba(0, 0, 0, 0.3);
         }
 
         * {
@@ -62,8 +62,9 @@
 
         .logo {
             font-size: 1.5rem;
-            font-weight: 600;
-            color: var(--accent-blue);
+            font-weight: 300;
+            color: var(--primary-text);
+            letter-spacing: -0.01em;
         }
 
         .nav-links {
@@ -99,7 +100,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="10" height="10" patternUnits="userSpaceOnUse"><path d="M 10 0 L 0 0 0 10" fill="none" stroke="rgba(66,133,244,0.1)" stroke-width="0.5"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="20" height="20" patternUnits="userSpaceOnUse"><path d="M 20 0 L 0 0 0 20" fill="none" stroke="rgba(255,255,255,0.03)" stroke-width="0.5"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>');
             opacity: 0.3;
         }
 
@@ -110,12 +111,10 @@
 
         .hero h1 {
             font-size: 3.5rem;
-            font-weight: 700;
+            font-weight: 300;
             margin-bottom: 1rem;
-            background: linear-gradient(135deg, var(--accent-blue), var(--accent-green));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: var(--primary-text);
+            letter-spacing: -0.02em;
         }
 
         .hero-subtitle {
@@ -143,12 +142,13 @@
         }
 
         .btn-primary {
-            background: var(--accent-blue);
-            color: white;
+            background: var(--primary-text);
+            color: var(--primary-bg);
+            font-weight: 500;
         }
 
         .btn-primary:hover {
-            background: #3367D6;
+            background: var(--accent-secondary);
             transform: translateY(-2px);
         }
 
@@ -159,8 +159,8 @@
         }
 
         .btn-secondary:hover {
-            border-color: var(--accent-blue);
-            color: var(--accent-blue);
+            border-color: var(--primary-text);
+            color: var(--primary-text);
         }
 
         /* Sections */
@@ -204,13 +204,14 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 4px;
-            background: linear-gradient(90deg, var(--accent-blue), var(--accent-green));
+            height: 2px;
+            background: var(--primary-text);
         }
 
         .project-card:hover {
             transform: translateY(-5px);
-            border-color: var(--accent-blue);
+            border-color: var(--primary-text);
+            box-shadow: 0 20px 40px var(--card-shadow);
         }
 
         .project-title {
@@ -222,11 +223,12 @@
 
         .project-type {
             display: inline-block;
-            background: var(--accent-blue);
-            color: white;
+            background: var(--primary-text);
+            color: var(--primary-bg);
             padding: 0.25rem 0.75rem;
-            border-radius: 20px;
+            border-radius: 12px;
             font-size: 0.875rem;
+            font-weight: 500;
             margin-bottom: 1rem;
         }
 
@@ -257,16 +259,18 @@
         }
 
         .project-link {
-            color: var(--accent-blue);
+            color: var(--primary-text);
             text-decoration: none;
             font-weight: 500;
             display: flex;
             align-items: center;
             gap: 0.5rem;
+            transition: all 0.3s ease;
         }
 
         .project-link:hover {
-            color: var(--accent-green);
+            color: var(--accent-secondary);
+            transform: translateX(5px);
         }
 
         /* Resume Section */
@@ -304,7 +308,7 @@
         }
 
         .highlight-icon {
-            color: var(--accent-green);
+            color: var(--primary-text);
             font-size: 1.2rem;
             margin-top: 0.25rem;
         }
@@ -338,12 +342,13 @@
 
         .contact-link:hover {
             transform: translateY(-5px);
-            border-color: var(--accent-blue);
+            border-color: var(--primary-text);
+            box-shadow: 0 10px 20px var(--card-shadow);
         }
 
         .contact-icon {
             font-size: 2rem;
-            color: var(--accent-blue);
+            color: var(--primary-text);
         }
 
         /* Footer */
@@ -401,7 +406,7 @@
 
         /* Scrollbar Styling */
         ::-webkit-scrollbar {
-            width: 8px;
+            width: 6px;
         }
 
         ::-webkit-scrollbar-track {
@@ -409,12 +414,12 @@
         }
 
         ::-webkit-scrollbar-thumb {
-            background: var(--accent-blue);
-            border-radius: 4px;
+            background: var(--accent-secondary);
+            border-radius: 3px;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: #3367D6;
+            background: var(--primary-text);
         }
     </style>
 </head>
@@ -436,9 +441,9 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content animate-fade-in">
-                <h1>Data Engineer</h1>
+                <h1>Zack Hada</h1>
                 <p class="hero-subtitle">
-                    Focused on scalable ETL pipelines, Python, Spark, and reproducible data infrastructure that transforms raw data into actionable intelligence.
+                    Data Engineer focused on scalable ETL pipelines, Python, and reproducible data infrastructure that transforms raw data into actionable intelligence.
                 </p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn btn-primary">View Projects</a>
@@ -563,7 +568,7 @@
                     <p style="color: var(--secondary-text); margin-bottom: 2rem;">
                         Complete technical background and experience
                     </p>
-                    <a href="./Zachary Hada Resume 20250916.pdf" class="btn btn-primary" download>
+                    <a href="Zachary Hada Resume 20250916.pdf" class="btn btn-primary" download>
                         <i class="fas fa-download"></i> Download PDF
                     </a>
                 </div>
